; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/qwiic/extr_micro_oled.c_draw_string.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/qwiic/extr_micro_oled.c_draw_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOTALFONTS = common dso_local global i64 0, align 8
@fonts_pointer = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @draw_string(i64 %0, i64 %1, i8* %2, i64 %3, i64 %4, i64 %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  store i64 %0, i64* %7, align 8
  store i64 %1, i64* %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  store i64 %5, i64* %12, align 8
  %17 = load i64, i64* %12, align 8
  %18 = load i64, i64* @TOTALFONTS, align 8
  %19 = icmp sge i64 %17, %18
  br i1 %19, label %23, label %20

20:                                               ; preds = %6
  %21 = load i64, i64* %12, align 8
  %22 = icmp slt i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20, %6
  br label %57

24:                                               ; preds = %20
  %25 = load i64, i64* %12, align 8
  store i64 %25, i64* %13, align 8
  %26 = load i64*, i64** @fonts_pointer, align 8
  %27 = load i64, i64* %13, align 8
  %28 = getelementptr inbounds i64, i64* %26, i64 %27
  %29 = load i64, i64* %28, align 8
  %30 = add nsw i64 %29, 0
  %31 = call i64 @pgm_read_byte(i64 %30)
  store i64 %31, i64* %14, align 8
  %32 = load i64, i64* %7, align 8
  store i64 %32, i64* %15, align 8
  store i32 0, i32* %16, align 4
  br label %33

33:                                               ; preds = %54, %24
  %34 = load i32, i32* %16, align 4
  %35 = load i8*, i8** %9, align 8
  %36 = call i32 @strlen(i8* %35)
  %37 = icmp slt i32 %34, %36
  br i1 %37, label %38, label %57

38:                                               ; preds = %33
  %39 = load i64, i64* %15, align 8
  %40 = load i64, i64* %8, align 8
  %41 = load i8*, i8** %9, align 8
  %42 = load i32, i32* %16, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i8, i8* %41, i64 %43
  %45 = load i8, i8* %44, align 1
  %46 = load i64, i64* %10, align 8
  %47 = load i64, i64* %11, align 8
  %48 = load i64, i64* %12, align 8
  %49 = call i32 @draw_char(i64 %39, i64 %40, i8 signext %45, i64 %46, i64 %47, i64 %48)
  %50 = load i64, i64* %14, align 8
  %51 = add nsw i64 %50, 1
  %52 = load i64, i64* %15, align 8
  %53 = add nsw i64 %52, %51
  store i64 %53, i64* %15, align 8
  br label %54

54:                                               ; preds = %38
  %55 = load i32, i32* %16, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %16, align 4
  br label %33

57:                                               ; preds = %23, %33
  ret void
}

declare dso_local i64 @pgm_read_byte(i64) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @draw_char(i64, i64, i8 signext, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
